# kaggle_HMS_2024

./: .gitignore  pyproject.toml  run.py  run.sh
scripts/: make_spectrograms.py  make_vis_signal.py  make_vis_specs.py  valid.py
scripts/eda/: eda001.py  eda002.py  eda003.py  eda004.py
src/: constants.py  dataset-metadata.json  metrics.py
src/exp/exp001/: config.py
src/exp/exp002/: config.py  train.py
src/exp/exp003/: config.py  train.py
src/exp/exp004/: config.py  train.py
src/exp/exp005/: config.py  train.py
src/exp/exp006/: config.py  train.py
src/exp/exp007/: config.py  train.py
src/exp/exp008/: config.py
src/exp/exp009/: config.py  train.py
src/exp/exp010/: config.py  train.py
src/exp/exp011/: config.py  train.py
src/exp/exp012/: config.py  train.py
src/exp/exp013/: config.py  train.py
src/exp/exp014/: config.py  train.py
src/exp/exp015/: config.py  train.py
src/exp/exp016/: config.py  train.py
src/exp/exp017/: config.py  train.py
src/exp/exp018/: config.py  train.py
src/exp/exp019/: config.py  train.py
src/exp/exp020/: config.py  train.py
src/exp/exp021/: config.py  train.py
src/exp/exp022/: config.py  train.py
src/exp/exp023/: config.py  train.py
src/exp/exp024/: config.py  train.py
src/exp/exp025/: config.py  train.py
src/exp/exp026/: config.py  train.py
src/exp/exp027/: config.py  train.py
src/exp/exp028/: config.py  train.py
src/exp/exp029/: config.py  train.py
src/exp/exp030/: config.py  train.py
src/exp/exp031/: config.py  train.py
src/exp/exp032/: config.py  train.py
src/exp/exp033/: config.py  train.py
src/exp/exp034/: config.py  train.py
src/exp/exp035/: config.py  train.py
src/exp/exp036/: config.py  train.py
src/exp/exp037/: config.py  train.py
src/exp/exp038/: config.py  train.py
src/exp/exp039/: config.py  train.py
src/exp/exp040/: config.py  train.py
src/exp/exp041/: config.py  train.py
src/exp/exp042/: config.py  train.py
src/exp/exp043/: config.py  train.py
src/inference/: data.py  tools.py
src/models/: common.py  feature_extractor.py  layers.py  models.py
src/training/: cv.py  data.py  losses.py  optim.py  preprocessings.py  tools.py
src/utils/: common.py  logger.py
